interpreter/tests/golden-files/lists.golden.enzo
[ ]
[ ]
error: list index out of range
    $emptyListTest.1;  // error: list index out of range
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: $empty-list already defined
    $empty-list: 50;    //error: $empty-list already defined
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ "now not empty" ]
[ "now not empty" ]
[ "red", "green", "blue", "yellow" ]
blue
2
green
[ [ 1, 2 ], [ 3, 4 ] ]
3
{ $lst: [ "a", "b", "c" ] }
b
[ { $x: 5 }, { $x: 7 } ]
[ { $x: 5 }, { $x: 7 } ]
7
[ 1, 2, 3 ]
Syntax error: Unexpected token '.0' at line 1, column 6.
Expected one of: COLON, DOTINT, DOTPROP, DOTVAR, MINUS, PLUS, SEMICOLON, SLASH, STAR, __ANON_0, __ANON_1
    $list.0;            // error: list index out of range
         ^
error: list index out of range
    $list.4;            // error: list index out of range
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Syntax error: Unexpected character '.' at line 1, column 6.
    $list.-1;           // error: list index out of range
         ^
Syntax error: Unexpected character '.' at line 1, column 6.
    $list."foo";        // error: list index out of range
         ^
error: index applies to lists
    $list.1.1;          // error: list index out of range
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ 1, 2 ]
5
[ 5, 2 ]
error: list index out of range
    $mutable.3 <: 9;        // error: list index out of range
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ 1, 2, 3 ]
[ 1, 2, 3 ]
double comma (remove one comma).
    $badList1: [1,,2];                        // error: remove one comma
                  ^
leading comma (remove the comma at the start).
    $badList2: [,1,2];                        // error: leading comma
                ^
leading comma (remove the comma at the start).
    $badList3: [,];                           // error: just comma
                ^
oops
error: index applies to lists
    $notalist.1;                              // index applies to lists
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
